--- a/rotary-waterblast-tools/barracuda-shotgunning.html
+++ b/rotary-waterblast-tools/barracuda-shotgunning.html
@@ -481,7 +481,7 @@ master-slider: yes
               <ul>
                 <li><a href="../assets/pdf/manuals/barracuda_22k_manual.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;22k Barracuda Models User Manual</a></li>
                 <li><a href="../assets/pdf/manuals/bc-h9-c_manual.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;40k Barracuda Models User Manual</a></li>
-                <li><a href="../assets/pdf/manuals/bc-h9-xxlf-c-ti_manual.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;40k Extra Low Flow Barracuda User Manual</a></li>
+                <li><a href="../assets/pdf/manuals/bc-h9-xxlf-c-ti_manual.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;40k XX Low Flow Barracuda User Manual</a></li>
                 <li><a href="../assets/pdf/manuals/BC_705_Cartridge_Assy.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;BC-705 Cartridge Info Sheet</a> <em>- Double the seal life of your BC-H9-C</em></li>
                 <li><a href="../assets/pdf/sales-manual/BC_config.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Barracuda Tool Talk</a></li>
                 <li><a href="http://jetting.stoneagetools.com/tool/jetting-app.html" target="_blank"><i class="fa fa-plane"></i> &nbsp;Tool Jetting</a></li>
