add detail table

--- a/waterblast-tools-automated-equipment-2.html
+++ b/waterblast-tools-automated-equipment-2.html
@@ -43,7 +43,19 @@ landing: yes
           <a href="/abx-2l">
             <img src="/assets/img/product/abx-2l-01.jpg" class="img-responsive" />
             <h3>AutoBox ABX-2L</h3>
-            <h5>Automated flex-lancing for small diameter conduit</h5>
+            <h5>Dual flex-lancing system</h5>
+            <table class="table table-hover">
+              <tbody>
+                <tr>
+                  <th>Cleans</th>
+                  <td>Small diameter tubes</td>
+                </tr>
+                <tr>
+                  <th>Hose Size</th>
+                  <td>3/2-8/4<br>&nbsp;</td>
+                </tr>
+              </tbody>
+            </table>
             <button>View Details</button>
           </a>
         </div>
@@ -52,7 +64,19 @@ landing: yes
           <a href="/abx-500">
             <img src="/assets/img/product/abx-500-02.jpg" class="img-responsive" />
             <h3>AutoBox ABX-500</h3>
-            <h5>Automated hose drive for pipe cleaning</h5>
+            <h5>Automated hose control device</h5>
+            <table class="table table-hover">
+              <tbody>
+                <tr>
+                  <th>Cleans</th>
+                  <td>Pipes, vessels, boilers</td>
+                </tr>
+                <tr>
+                  <th>Hose Size</th>
+                  <td>0.56–1.75 in.<br><span class="metric">13–44 mm OD</span></td>
+                </tr>
+              </tbody>
+            </table>
             <button>View Details</button>
           </a>
         </div>
