--- a/waterblast-tools-automated-equipment.html
+++ b/waterblast-tools-automated-equipment.html
@@ -7,13 +7,8 @@ landing: yes
 ---
 
 
-<section class="landing">
-  <div class="row bg-lt-grey margin-bottom-30 header">
-<!--
-    <div class="col-sm-12 heading-img">
-      <img src="assets/img/sewer-family-2016.jpg" class="img-responsive" alt="Striker Remote Shotgunning System for Hydroblasting"/>
-    </div>
--->
+<section class="spincat landing">
+  <div class="row bg-lt-grey header">
     <div class="col-sm-12 heading">
       <h1>Waterblast Tools &amp; Equipment</h1>
       <h3>Rotary and Automated Tools for High Pressure Waterblasting</h3>
@@ -21,54 +16,46 @@ landing: yes
   </div>
 
   <!-- MixItUp Content -->
-  <div class="container margin-bottom-120">
-<!--
+  <div class="row margin-bottom-120">
     <div class="controls">
-      <label>Filter:</label>
+      <label>Filter for:</label>
 
-      <button class="filter" data-filter="all">All Applications</button>
-      <button class="filter" data-filter=".exchanger-cleaning">Exchanger Cleaning</button>
-      <button class="filter" data-filter=".surface-prep">Surface Preparation</button>
-      <button class="filter" data-filter=".pipe-cleaning">Pipe Cleaning</button>
+      <button class="filter" data-filter="all">All</button>
+      <button class="filter" data-filter=".exchanger-cleaning">Tubes</button>
+      <button class="filter" data-filter=".pipe-cleaning">Pipes</button>
+      <button class="filter" data-filter=".surface-prep">Surfaces</button>
+      <button class="filter" data-filter=".tank-cleaning">Tanks/Vessels</button>
+      <button class="filter" data-filter=".boiler-cleaning">Boilers/Furnaces</button>
+      <button class="filter" data-filter=".hydro-demo">Concrete</button>
+      <button class="filter" data-filter=".accessories">Accessories</button>
 
       <label>Sort:</label>
 
-      <button class="sort" data-sort="myorder:asc">Asc</button>
-      <button class="sort" data-sort="myorder:desc">Desc</button>
+      <button class="sort" data-sort="myorder:asc">Automated</button>
+      <button class="sort" data-sort="myorder:desc">Manual</button>
     </div>
--->
-
-    <!-- controls -->
-    <aside class="col-sm-2 right-sidebar filter-by">
-      <h2>Filter by:</h2>
-      <ul class="list-unstyled">
-        <li><a class="filter" data-filter="all">All Applications</a></li>
-        <li><a class="filter" data-filter=".exchanger-cleaning">Exchanger Cleaning</a></li>
-        <li><a class="filter" data-filter=".pipe-cleaning">Pipe Cleaning</a></li>
-        <li><a class="filter" data-filter=".surface-prep">Surface Preparation</a></li>
-        <li><a class="filter" data-filter=".tank-cleaning">Tank/Vessel Cleaning</a></li>
-        <li><a class="filter" data-filter=".boiler-cleaning">Boiler/Furnace Cleaning</a></li>
-        <li><a class="filter" data-filter=".hydro-demo">Concrete Hydrodemolition</a></li>
-        <li><a class="filter" data-filter=".accessories">Accessories</a></li>
-      </ul>
-      <br>
-      <h2>Sort by:</h2>
-      <ul class="list-unstyled">
-        <li><a class="sort" data-sort="myorder:asc">Automated</a></li>
-        <li><a class="sort" data-sort="myorder:desc">Rotary/manual</a></li>
-      </ul>
-<!--      <h2 class="filter" data-filter="all">Show All</h2>-->
-    </aside>
 
     <!-- product list -->
-    <div class="col-sm-10 margin-bottom-60 padding-left-60">
-      <div id="Container" class="directory">
+    <div class="row">
+      <div id="Container" class="container directory">
         
         <div class="mix exchanger-cleaning automated" data-myorder="1">
           <a href="/abx-2l">
             <img src="/assets/img/product/abx-2l-01.jpg" class="img-responsive" />
             <h3>AutoBox ABX-2L</h3>
-            <h5>Automated flex-lancing system</h5>
+            <h5>Dual flex-lancing system</h5>
+            <table class="table">
+              <tbody>
+                <tr>
+                  <th>Cleans</th>
+                  <td>Small diameter tubes</td>
+                </tr>
+                <tr>
+                  <th>Hose Size</th>
+                  <td>3/2-8/4<br>&nbsp;</td>
+                </tr>
+              </tbody>
+            </table>
             <button>View Details</button>
           </a>
         </div>
@@ -77,7 +64,19 @@ landing: yes
           <a href="/abx-500">
             <img src="/assets/img/product/abx-500-02.jpg" class="img-responsive" />
             <h3>AutoBox ABX-500</h3>
-            <h5>Automated hose drive for pipe cleaning</h5>
+            <h5>Automated hose control device</h5>
+            <table class="table">
+              <tbody>
+                <tr>
+                  <th>Cleans</th>
+                  <td>Pipes, vessels, boilers</td>
+                </tr>
+                <tr>
+                  <th>Hose Size</th>
+                  <td>0.56–1.75 in.<br><span class="metric">13–44 mm OD</span></td>
+                </tr>
+              </tbody>
+            </table>
             <button>View Details</button>
           </a>
         </div>
@@ -87,6 +86,17 @@ landing: yes
             <img src="/assets/img/product/backout-310.jpg" class="img-responsive" />
             <h3>Backout Prevention</h3>
             <h5>For pipes &amp; tubes</h5>
+            <table class="table">
+              <tbody>
+                <tr>
+                  <th colspan="2">For use in rotary pipe and tube cleaning</th>
+                </tr>
+                <tr>
+                  <th>Tools</th>
+                  <td>Badger, Banshee, BJV, Gopher, Raptor</td>
+                </tr>
+              </tbody>
+            </table>
             <button>View Details</button>
           </a>
         </div>
@@ -95,7 +105,19 @@ landing: yes
           <a href="/2inch-badger">
             <img src="/assets/img/product/badger-2in-04.jpg" class="img-responsive" />
             <h3>Badger 2"</h3>
-            <h5>Rotary cleaning nozzle for pipes with bends</h5>
+            <h5>Rotary cleaning nozzles for pipes with bends</h5>
+            <table class="table">
+              <tbody>
+                <tr>
+                  <th>Pipe Size</th>
+                  <td>2-4 in. &nbsp;<span class="metric">51-102 mm</span></td>
+                </tr>
+                <tr>
+                  <th>Pressure Range</th>
+                  <td>2–22k psi<br><span class="metric">140–1500 bar</span></td>
+                </tr>
+              </tbody>
+            </table>
             <button>View Details</button>
           </a>
         </div>
@@ -104,7 +126,19 @@ landing: yes
           <a href="/4inch-badger">
             <img src="/assets/img/product/badger-4in-02.jpg" class="img-responsive" />
             <h3>Badger 4"</h3>
-            <h5>Rotary cleaning nozzle for pipes with bends</h5>
+            <h5>Rotary cleaning nozzles for pipes with bends</h5>
+            <table class="table">
+              <tbody>
+                <tr>
+                  <th>Pipe Size</th>
+                  <td>4-8 in. &nbsp;<span class="metric">102-203 mm</span></td>
+                </tr>
+                <tr>
+                  <th>Pressure Range</th>
+                  <td>2–44k psi<br><span class="metric">140–3000 bar</span></td>
+                </tr>
+              </tbody>
+            </table>
             <button>View Details</button>
           </a>
         </div>
@@ -113,7 +147,19 @@ landing: yes
           <a href="/6inch-badger">
             <img src="/assets/img/product/badger-6in-03.jpg" class="img-responsive" />
             <h3>Badger 6"</h3>
-            <h5>Rotary cleaning nozzle for pipes with bends</h5>
+            <h5>Rotary cleaning nozzles for pipes with bends</h5>
+            <table class="table">
+              <tbody>
+                <tr>
+                  <th>Pipe Size</th>
+                  <td>6-12 in. &nbsp;<span class="metric">152-305 mm</span></td>
+                </tr>
+                <tr>
+                  <th>Pressure Range</th>
+                  <td>2–22k psi<br><span class="metric">140–1500 bar</span></td>
+                </tr>
+              </tbody>
+            </table>
             <button>View Details</button>
           </a>
         </div>
@@ -123,6 +169,18 @@ landing: yes
             <img src="/assets/img/product/banshee-01.jpg" class="img-responsive" />
             <h3>Banshee</h3>
             <h5>Rotary tube cleaning nozzles</h5>
+            <table class="table">
+              <tbody>
+                <tr>
+                  <th>Tube Size</th>
+                  <td>0.47-3.0 in. &nbsp;<span class="metric">12-76 mm</span></td>
+                </tr>
+                <tr>
+                  <th>Pressure Range</th>
+                  <td>10–40k psi<br><span class="metric">700–2800 bar</span></td>
+                </tr>
+              </tbody>
+            </table>
             <button>View Details</button>
           </a>
         </div>
@@ -132,6 +190,18 @@ landing: yes
             <img src="/assets/img/product/barracuda-01.jpg" class="img-responsive" />
             <h3>Barracuda</h3>
             <h5>Rotary shotgun cleaning nozzles</h5>
+            <table class="table">
+              <tbody>
+                <tr>
+                  <th>Pressure Range</th>
+                  <td>2–44k psi<br><span class="metric">140–3000 bar</span></td>
+                </tr>
+                <tr>
+                  <th>Flow Range</th>
+                  <td>1.7-11 gpm &nbsp;<span class="metric">6-42 l/min</span></td>
+                </tr>
+              </tbody>
+            </table>
             <button>View Details</button>
           </a>
         </div>
@@ -141,6 +211,18 @@ landing: yes
             <img src="/assets/img/product/bfw-02.jpg" class="img-responsive" />
             <h3>BFW-100</h3>
             <h5>High flow online boiler cleaning</h5>
+            <table class="table">
+              <tbody>
+                <tr>
+                  <th>Pressure</th>
+                  <td>Up to 10k psi &nbsp;<span class="metric">690 bar</span></td>
+                </tr>
+                <tr>
+                  <th>Flow</th>
+                  <td>Up to 300 psi<br><span class="metric">1140 l/min</span></td>
+                </tr>
+              </tbody>
+            </table>
             <button>View Details</button>
           </a>
         </div>
@@ -149,7 +231,19 @@ landing: yes
           <a href="/bjv">
             <img src="/assets/img/product/bjv-03.jpg" class="img-responsive" />
             <h3>BJV</h3>
-            <h5>Rotary cleaning nozzle for straight pipes</h5>
+            <h5>Rotary cleaning nozzle for pipes &amp; vessels</h5>
+            <table class="table">
+              <tbody>
+                <tr>
+                  <th>Pipe Size</th>
+                  <td>6-180 in. &nbsp;<span class="metric">152 mm-4.5 m</span></td>
+                </tr>
+                <tr>
+                  <th>Pressure Range</th>
+                  <td>2–40k psi<br><span class="metric">140–2800 bar</span></td>
+                </tr>
+              </tbody>
+            </table>
             <button>View Details</button>
           </a>
         </div>
@@ -167,7 +261,7 @@ landing: yes
           <a href="/blackhawk">
             <img src="/assets/img/product/blackhawk-01.jpg" class="img-responsive" />
             <h3>Blackhawk</h3>
-            <h5>Concrete hydrodemolition</h5>
+            <h5>Concrete hydrodemolition &amp; scarification</h5>
             <button>View Details</button>
           </a>
         </div>
@@ -194,7 +288,7 @@ landing: yes
           <a href="/cst-air">
             <img src="/assets/img/product/cst-04.jpg" class="img-responsive" />
             <h3>CST-Air</h3>
-            <h5>Cable-guided furnace and boiler cleaning</h5>
+            <h5>Cable-guided furnace/boiler cleaning</h5>
             <button>View Details</button>
           </a>
         </div>
@@ -338,7 +432,7 @@ landing: yes
           <a href="/rotary-swivels">
             <img src="/assets/img/product/swivel-01.jpg" class="img-responsive" />
             <h3>Rotary Swivels</h3>
-            <h5>Rotary motion for waterblast applications</h5>
+            <h5>Rotary motion for waterblasting</h5>
             <button>View Details</button>
           </a>
         </div>
