--- a/index.html
+++ b/index.html
@@ -184,7 +184,12 @@ permalink: /
     </div>
     <ul class="home-news list-unstyled">
       <li>
-        <h4><a href="http://info.stoneagetools.com/striker-discount-offer-limited">10% OFF Striker</a></h4>
+        <h4><a href="http://news.stoneagetools.com/beetle-bt25-cleans-small-diameter-pipes-tubes-with-bends">Announcing Beetle BT25 for Small Diameter Pipes with Bends</a></h4>
+        <p>We are pleased to announce the release of the Beetle BT25, the newest addition to the Beetle line of small pipe cleaning nozzles.<br>
+<small><i class="fa fa-paper-plane-o"></i> E-blast, July 2016</small></p>
+      </li>
+      <li>
+        <h4><a href="http://news.stoneagetools.com/striker-discount-offer-limited">10% OFF Striker</a></h4>
         <p>For a limited time, StoneAge is reducing the price of our highly successful Striker Remote Shotgun System by 10%.<br>
 <small><i class="fa fa-paper-plane-o"></i> E-blast, June 2016</small></p>
       </li>
@@ -198,11 +203,6 @@ permalink: /
 </a></h4>
         <p> We are pleased to announce the release of our latest exchanger cleaning accessory for the AutoBox ABX-2L.<br>
 <small><i class="fa fa-paper-plane-o"></i> E-blast, May, 2016</small></p>
-      </li>
-      <li>
-        <h4><a href="http://info.stoneagetools.com/new-exchanger-cleaning-accessories-for-abx-2l" target="_blank">New Accessories for the AutoBox ABX-2L</a></h4>
-        <p>StoneAge is pleased to announce three new accessories for the AutoBox ABX-2L automated exchanger cleaning system.<br>
-<small><i class="fa fa-paper-plane-o"></i> E-blast, March 2016</small></p>
       </li>
       <li><a href="/news">More news here</a></li>
     </ul>
