--- a/news.html
+++ b/news.html
@@ -17,7 +17,15 @@ permalink: /news
       
       <div class="media">          
         <div class="media-body">
-          <a href="http://info.stoneagetools.com/striker-discount-offer-limited"><h4 class="media-heading"><i class="fa fa-paper-plane-o"></i> 10% OFF Striker</h4></a>
+          <a href="http://news.stoneagetools.com/beetle-bt25-cleans-small-diameter-pipes-tubes-with-bends"><h4 class="media-heading"><i class="fa fa-paper-plane-o"></i> Announcing Beetle BT25 for Small Diameter Pipes with Bends</h4></a>
+          We are pleased to announce the release of the Beetle BT25, the newest addition to the Beetle line of small pipe cleaning nozzles.
+          <p class="grey"><small>E-blast &ndash; July 18, 2016</small></p>
+        </div>
+      </div>
+      
+      <div class="media">          
+        <div class="media-body">
+          <a href="http://news.stoneagetools.com/striker-discount-offer-limited"><h4 class="media-heading"><i class="fa fa-paper-plane-o"></i> 10% OFF Striker</h4></a>
           For a limited time, StoneAge is reducing the price of our highly successful Striker Remote Shotgun System by 10%.
           <p class="grey"><small>E-blast &ndash; June 29, 2016</small></p>
         </div>
