--- a/waterblast-automation/navigator-small-pipe-cleaning.html
+++ b/waterblast-automation/navigator-small-pipe-cleaning.html
@@ -71,7 +71,7 @@ master-slider: yes
           <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
             <div class="panel-body">
               <ul>
-                <li>Specialized for cleaning small process piping/tubes, and drain lines down to 1” (25 mm) ID – runs 4/4, 5/4, and 6/4 hoses</li>
+                <li>Specialized for cleaning small process piping/tubes, and drain lines 2-4” (51-102 mm) ID – runs 4/4, 5/4, and 6/4 hoses</li>
                 <li>Clean past multiple bends and elbows using hose rotation and StoneAge’s proven self-rotary tools</li>
                 <li>Hose containment for safety, hose protection, and transport</li>
                 <li>Lightweight, compact and portable</li>
