Update LA office phone

--- a/loc-la.html
+++ b/loc-la.html
@@ -51,13 +51,15 @@ contact-la: yes
           <div class="col-sm-6">
             <p><strong>Dean Tramontana</strong><br/>
               Operations Manager<br/>
-              Main: +1 (225) 508-3516
+              Office: +1 (225) 508-3520<br/>
+              Direct: +1 (225) 508-3516
             <a href="mailto:dean.tramontana@stoneagetools.com">dean.tramontana@stoneagetools.com</a></p>
           </div>
           <div class="col-sm-6">
             <p><strong>Becky Smith</strong><br/>
               Office Manager<br/>
-              Main: +1 (225) 508-3517<br/>
+              Office: +1 (225) 508-3520<br/>
+              Direct: +1 (225) 508-3517<br/>
               <a href="mailto:becky.smith@stoneagetools.com">becky.smith@stoneagetools.com</a></p>
           </div>
         </div>
