progress on manuals directory

--- a/waterblast-tools-automated-equipment.html
+++ b/waterblast-tools-automated-equipment.html
@@ -399,7 +399,7 @@ landing: yes
         </div>
         
         <div class="mix surface-prep automated" data-myorder="9">
-          <a href="/floor cleaner" class="search-text">
+          <a href="/floor-cleaner" class="search-text">
             <img src="/assets/img/product/fcsv-01.jpg" class="img-responsive" />
             <h3>Floor Cleaner</h3>
             <h5>Self-rotary surface cleaning</h5>
