--- a/index.html
+++ b/index.html
@@ -167,12 +167,21 @@ permalink: /
     <div class="section-heading">
       <h2>Events</h2>
     </div>
-    <a href="/houston"><img src="/assets/img/thumb/upcoming-event-tx-open-house.jpg" class="img-responsive"/></a>
-    <div class="caption">
-    <h4><a href="/houston">Open House Houston<br><span class="small">July 28, 2016<br/>
-        11:00-3:00 pm CST<br/>
-        StoneAge Houston</span></a></h4>
-      <p><strong>Join us for the opening celebration of our StoneAge Houston facility.</strong></p><p>This is an opportunity to see available equipment and talk with the staff  - <em>while enjoying refreshments!</em></p>
+    <div class="row">
+      <a href="http://www.tristateseminar.com/" target="_blank"><img src="/assets/img/thumb/upcoming_events_tri-state_2016.JPG" class="img-responsive"/></a>
+      <div class="caption">
+      <h4><a href="http://www.tristateseminar.com/" target="_blank">Tri-State Seminar<br><span class="small">September 20-22, 2016<br/>
+          Las Vegas, NV</span></a></h4>
+        <p>High quality educational programming for water professionals</p>
+      </div>
+    </div>
+    <div class="row">
+      <a href="http://www.weftec.org/" target="_blank"><img src="/assets/img/thumb/upcoming-event-weftec-2016.jpg" class="img-responsive"/></a>
+      <div class="caption">
+      <h4><a href="http://www.weftec.org/" target="_blank">WEFTEC<br><span class="small">September 24-28, 2016<br/>
+          New Orleans, LA</span></a></h4>
+        <p>The water quality event&trade;</p>
+      </div>
     </div>
   </div>
   <!-- End Events --> 
