Complete to present: 1. WB listing, 2. Product page, 3. Tool manuals v1, 4. Blog structure (HS & footer)

--- a/sewer-tools.html
+++ b/sewer-tools.html
@@ -5,36 +5,17 @@ excerpt: High quality, durable jetting nozzles for the sewer industry.
 permalink: /sewer-tools
 landing: yes
 ---
-
-<section class="spincat landing">
-  <div class="row bg-lt-grey header">
-<!--
+  
+<section class="landing">
+  <div class="row header">
     <div class="col-sm-12 heading-img">
-      <img src="assets/img/sewer-family-2016.jpg" class="img-responsive" alt="Striker Remote Shotgunning System for Hydroblasting"/>
+      <img src="assets/img/sewer-family-2016.jpg" class="img-responsive" alt="Waterblasting Tools and Equipment"/>
     </div>
--->
     <div class="col-sm-12 heading">
       <h1>Sewer Nozzles</h1>
       <h3>The Industry's Most Powerful &amp; Durable Tools</h3>
     </div>
   </div>
-  <!-- MixItUp Content -->
-  <div class="row margin-bottom-120">
-    <div class="controls">
-      <label>Filter:</label>
-
-      <button class="filter" data-filter="all">All</button>
-      <button class="filter" data-filter=".exchanger-cleaning">Large Lines</button>
-      <button class="filter" data-filter=".surface-prep">Medium Lines</button>
-      <button class="filter" data-filter=".pipe-cleaning">Small Lines</button>
-      <button class="filter" data-filter=".pipe-cleaning">Hydro-excavation</button>
-      <button class="filter" data-filter=".pipe-cleaning">Accessories</button>
-
-      <label>Sort:</label>
-
-      <button class="sort" data-sort="myorder:asc">Asc</button>
-      <button class="sort" data-sort="myorder:desc">Desc</button>
-    </div>
 
   <!-- Product List -->
   <div class="row">
