--- a/waterblast-automation/autobox-abx-2l.html
+++ b/waterblast-automation/autobox-abx-2l.html
@@ -25,7 +25,7 @@ master-slider: yes
 
       <!-- Master Slider -->
       <div class="ms-showcase2-template">
-        <div class="master-slider ms-skin-default" id="masterslider">
+        <div class="master-slider ms-skin-light-2" id="masterslider">
           <div class="ms-slide">
             <img class="ms-brd" src="../assets/img/blank.gif" data-src="/assets/img/product/abx-2l-01.jpg" alt="AutoBox ABX-2L exchanger cleaning system">
             <img class="ms-thumb" src="/assets/img/product/thumb-abx-2l-01.jpg" alt="thumb">
