Add dealers, misc updates

--- a/index.html
+++ b/index.html
@@ -193,6 +193,11 @@ permalink: /
     </div>
     <ul class="home-news list-unstyled">
       <li>
+        <h4><a href="http://news.stoneagetools.com/free-beetle-offer">Free Beetle Offer</a></h4>
+        <p>Optimize your automated equipment by pairing it with the right rotary nozzle - FOR FREE<br>
+<small><i class="fa fa-paper-plane-o"></i> E-blast, August, 2016</small></p>
+      </li>
+      <li>
         <h4><a href="http://news.stoneagetools.com/beetle-bt25-cleans-small-diameter-pipes-tubes-with-bends">Announcing Beetle BT25 for Small Diameter Pipes with Bends</a></h4>
         <p>We are pleased to announce the release of the Beetle BT25, the newest addition to the Beetle line of small pipe cleaning nozzles.<br>
 <small><i class="fa fa-paper-plane-o"></i> E-blast, July 2016</small></p>
@@ -206,12 +211,6 @@ permalink: /
         <h4><a href="http://info.stoneagetools.com/double-the-life-of-your-44k-barracuda" target="_blank">Double the life of your 44k Barracuda</a></h4>
         <p>The new <strong>BC 705 high pressure cartridge for 44k StoneAge Barracuda shotgun tools</strong> has successfully enabled many of our customers to double the operating life between maintenance cycles from 40 to 80 hours.<br>
 <small><i class="fa fa-paper-plane-o"></i> E-blast, May 2016</small></p>
-      </li>
-      <li>
-        <h4><a href="http://info.stoneagetools.com/autostroke-now-available" target="_blank">AutoStroke Automatic Blockage Sensor Released
-</a></h4>
-        <p> We are pleased to announce the release of our latest exchanger cleaning accessory for the AutoBox ABX-2L.<br>
-<small><i class="fa fa-paper-plane-o"></i> E-blast, May, 2016</small></p>
       </li>
       <li><a href="/news">More news here</a></li>
     </ul>
