--- a/news.html
+++ b/news.html
@@ -17,6 +17,14 @@ permalink: /news
       
       <div class="media">          
         <div class="media-body">
+          <a href="http://news.stoneagetools.com/free-beetle-offer"><h4 class="media-heading"><i class="fa fa-paper-plane-o"></i> Free Beetle Offer</h4></a>
+          Optimize your automated equipment by pairing it with the right rotary nozzle - FOR FREE
+          <p class="grey"><small>E-blast &ndash; August 8, 2016</small></p>
+        </div>
+      </div>
+      
+      <div class="media">          
+        <div class="media-body">
           <a href="http://news.stoneagetools.com/beetle-bt25-cleans-small-diameter-pipes-tubes-with-bends"><h4 class="media-heading"><i class="fa fa-paper-plane-o"></i> Announcing Beetle BT25 for Small Diameter Pipes with Bends</h4></a>
           We are pleased to announce the release of the Beetle BT25, the newest addition to the Beetle line of small pipe cleaning nozzles.
           <p class="grey"><small>E-blast &ndash; July 18, 2016</small></p>
