Add catalog translations

--- a/product-catalogs.html
+++ b/product-catalogs.html
@@ -21,6 +21,10 @@ permalink: /product-catalogs
       <div class="col-sm-8">
         <h3>2016 Waterblast Tools</h3>
         <p><a href="assets/pdf/waterblast_2016/2016_stoneage_waterblast_catalog.pdf" target="_blank" title="2016 StoneAge Waterblast Tools Catalog">Click here to download the complete Waterblast Tools Catalog</a> » PDF 9 MB</p>
+        <p>
+          <a href="/assets/pdf/waterblast_2016/2016_waterblast_catalog_FR.pdf" target="_blank"><img src="/assets/img/icon-France-flag.png" alt="French" /></a>
+          <a href="/assets/pdf/waterblast_2016/2016_waterblast_catalog_DE.pdf" target="_blank"><img src="/assets/img/icon-Germany-flag.png" alt="German" /></a>
+        </p>
       </div>
     </div>
 
