--- a/waterblast-automation/floor-cleaner.html
+++ b/waterblast-automation/floor-cleaner.html
@@ -108,15 +108,15 @@ master-slider: yes
               <tbody>
                 <tr>
                   <th>Tool Model</th>
-                  <td colspan="2">FCSV</td>
+                  <td colspan="2">FCSV, FCSG</td>
                 </tr>
                 <tr>
-                  <th>Maximum Pressure</th>
-                  <td>20k psi</td>
-                  <td><span class="metric">1380 bar</span></td>
+                  <th>Pressure Range</th>
+                  <td>2-20k psi</td>
+                  <td><span class="metric">138-1380 bar</span></td>
                 </tr>
                 <tr>
-                  <th>Maximum Flow</th>
+                  <th>Flow Range</th>
                   <td>Up to 28 gpm</td>
                   <td><span class="metric">106 l/min</span></td>
                 </tr>
@@ -127,8 +127,8 @@ master-slider: yes
                 </tr>
                 <tr>
                   <th>Jet Path</th>
-                  <td>18–24 in.</td>
-                  <td><span class="metric">356–610 mm</span></td>
+                  <td>18 or 24 in.</td>
+                  <td><span class="metric">356 or 610 mm</span></td>
                 </tr>
                 <tr>
                   <th>Height Range</th>
