--- a/waterblast-automation/floor-cleaner.html
+++ b/waterblast-automation/floor-cleaner.html
@@ -112,8 +112,8 @@ master-slider: yes
                 </tr>
                 <tr>
                   <th>Pressure Range</th>
-                  <td>2-20k psi</td>
-                  <td><span class="metric">138-1380 bar</span></td>
+                  <td>2-22k psi</td>
+                  <td><span class="metric">138-1500 bar</span></td>
                 </tr>
                 <tr>
                   <th>Flow Range</th>
@@ -127,8 +127,8 @@ master-slider: yes
                 </tr>
                 <tr>
                   <th>Jet Path</th>
-                  <td>18 or 24 in.</td>
-                  <td><span class="metric">356 or 610 mm</span></td>
+                  <td>24 in.</td>
+                  <td><span class="metric">610 mm</span></td>
                 </tr>
                 <tr>
                   <th>Height Range</th>
