rentals page added and links from other pages

--- a/index.html
+++ b/index.html
@@ -222,6 +222,7 @@ permalink: /
     <div class="section-heading">
       <h2>Message from the CEO</h2>
     </div>
+    <p><a href="/rentals.html">Rentals Now Available</a> at all regional locations with nationwide support.</p>
     <!-- Lightbox call -->
     <div>
       <a href="#" src="/assets/vid/vids.html" data-featherlight="/assets/vid/vids.html #godirect-vid">
