--- a/loc-ohio.html
+++ b/loc-ohio.html
@@ -42,7 +42,7 @@ contact-ohio: yes
       <div class="col-sm-7 col-sm-offset-1">
         <div class="row margin-bottom-30">
           <p>Serving our customers in the mid-west and northeast, the StoneAge Ohio location facilitates sales, repairs and rentals of StoneAge tools and automated equipment.</p>
-          <p><span class="slab bold text-uppercase">Tool rentals available!</span><br/>Our rental fleet is equipped with the tools you need. Contact us for information.</p>
+          <p><span class="slab bold text-uppercase">Tool rentals available!</span><br/>Our rental fleet is equipped with the tools you need. Contact us or <a href="/rentals">click here for information.</a></p>
         </div>
 
         <h3 class="section-heading">Operations, Repairs, Rentals</h3>
