--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,8 @@ contact-main: yes
   <div class="contact-nav container">
     <ul class="nav nav-tabs" role="tablist">
       <li role="presentation" class="active"><a href="#contact-tab" aria-controls="contact-tab" role="tab" data-toggle="tab">Contact</a></li>
-      <li role="presentation"><a href="#ordering-tab" aria-controls="ordering-tab" role="tab" data-toggle="tab">Ordering</a></li>
+      <li role="presentation"><a href="#sales-tab" aria-controls="sales-tab" role="tab" data-toggle="tab">Sales</a></li>
+      <li role="presentation"><a href="#rentals-tab" aria-controls="rentals-tab" role="tab" data-toggle="tab">Rentals</a></li>
       <li role="presentation"><a href="#wb-tab" aria-controls="wb-tab" role="tab" data-toggle="tab">Waterblast Dealers</a></li>
       <li role="presentation"><a href="#sewer-tab" aria-controls="sewer-tab" role="tab" data-toggle="tab">Sewer Dealers</a></li>
       <li role="presentation"><a href="#downhole-tab" aria-controls="downhole-tab" role="tab" data-toggle="tab">Downhole Dealers</a></li>
@@ -89,12 +90,12 @@ contact-main: yes
         </div>
       </div>
       
-      <!-- Ordering Tab Content -->
-      <div role="tabpanel" class="tab-pane" id="ordering-tab" data-target="#ordering-tab">
+      <!-- Sales Tab Content -->
+      <div role="tabpanel" class="tab-pane" id="sales-tab" data-target="#sales-tab">
         <div class="row margin-bottom-120">
           <div class="col-sm-3 contact-method">
             <h3 class="bold">US &amp; Canada Waterblast Orders</h3>
-            <p><a href="#contact-tab" data-toggle="tab">Contact StoneAge directly</a> to purchase in the US or Canada.</p>
+            <p><a href="#contact-tab" data-toggle="tab">Purchase from StoneAge directly</a> in the US or Canada.</p>
           </div>
           <div class="col-sm-3 contact-method">
             <h3 class="bold">International Waterblast Orders</h3>
@@ -107,6 +108,41 @@ contact-main: yes
           <div class="col-sm-3 contact-method">
             <h3>Downhole Tools Orders</h3>
             <p><a href="#downhole-tab" data-toggle="tab">Contact a dealer in your region</a> to purchase.</p>
+          </div>
+        </div>
+      </div>
+      
+      <!-- Rentals Tab Content -->
+      <div role="tabpanel" class="tab-pane" id="rentals-tab" data-target="#rentals-tab">
+        <div class="row margin-bottom-60">
+          <div class="col-sm-12 contact-method">
+            <h2 class="bold">Tool Rentals</h2>
+            <hr>
+            <p><strong>Rent StoneAge’s industry leading tools and automated equipment.</strong><br>We are here to help you meet your rental service needs.</p>
+            <p>Contact any of our regional locations to rent StoneAge equipment – <em class="bold"> ask about purchase options.</em></p>
+            <p><a href="/rentals">Click here for more information.</a></p>
+            <hr>
+            <div class="row">
+              <div class="col-sm-4">
+                <h5 class="bold slab">Houston Area</h5>
+                <p>Pasadena, TX<br>
+                  +1 (281) 888-5069<br>
+                  <a href="mailto:sales-tx@stoneagetools.com">sales-tx@stoneagetools.com</a></p>
+              </div>
+              <div class="col-sm-4">
+                <h5 class="bold slab">Louisiana</h5>
+                <p>Geismar, LA<br>
+                  +1 (225) 508-3520<br>
+                  <a href="mailto:sales-la@stoneagetools.com">sales-la@stoneagetools.com</a></p>
+              </div>
+              <div class="col-sm-4">
+                <h5 class="bold slab">Ohio</h5>
+                <p>North Royalton, OH<br>
+                  +1 (440) 230-8080<br>
+                  <a href="mailto:sales-oh@stoneagetools.com">sales-oh@stoneagetools.com</a></p>
+              </div>
+            </div>
+            <div class="row padding-tb-30"><p><em>We ship rental equipment and support jobs throughout North America.</em></p></div>
           </div>
         </div>
       </div>
