--- a/loc-la.html
+++ b/loc-la.html
@@ -43,7 +43,7 @@ contact-la: yes
       <div class="col-sm-7 col-sm-offset-1">
         <div class="row margin-bottom-30">
           <p>Serving the southeast and Gulf Coast, customers can visit our Louisiana location to purchase, repair and rent StoneAge tools and automated equipment.</p>
-          <p><span class="slab bold text-uppercase">Tool rentals available!</span><br/>Our rental fleet is equipped with the tools you need. Contact us for information.</p>
+          <p><span class="slab bold text-uppercase">Tool rentals available!</span><br/>Our rental fleet is equipped with the tools you need. Contact us or <a href="/rentals">click here for information.</a></p>
         </div>
 
         <h3 class="section-heading">Operations, Rentals, Service</h3>
