progress on rentals page

--- a/rentals.html
+++ b/rentals.html
@@ -24,7 +24,7 @@ permalink: /rentals
   <aside class="col-sm-3 col-sm-offset-2 cta">
     <div>
       <img src="assets/img/thumb/barracuda-02.jpg" class="img-responsive" alt="Barracuda rotary shotgun tools" />
-      <p class="bold">Renting from StoneAge is a great option when you want to:</p>
+      <p class="bold" style="border:none;">Renting from StoneAge is a great option when you want to:</p>
       <ul>
         <li>Expand your fleet temporarily during times of peak use</li>
         <li>Quickly get back-up equipment in the middle of a job</li>
