--- a/contact.html
+++ b/contact.html
@@ -142,7 +142,7 @@ contact-main: yes
                   <a href="mailto:sales-oh@stoneagetools.com">sales-oh@stoneagetools.com</a></p>
               </div>
             </div>
-            <div class="row padding-tb-30"><p><em>We ship rental equipment and support jobs throughout North America.</em></p></div>
+            <div class="row padding-tb-30"><p><em>We ship rental equipment and support jobs throughout the continental US.</em></p></div>
           </div>
         </div>
       </div>
