--- a/rentals.html
+++ b/rentals.html
@@ -13,32 +13,36 @@ permalink: /rentals
 
 <section class="container padding-tb-30">
   <div class="col-sm-7">
-    <h1 class="thin grey spaced margin-bottom-30"><em>Rent StoneAge’s industry leading tools and automated equipment.</em></h1>
-    <p>Our rental program is designed to give contractors greater flexibility to go after new contracts with the confidence to expand the equipment fleet to meet demand as needed.</p>
+    <h1 class="thin grey spaced margin-bottom-30"><em>Rent StoneAge’s industry-leading tools and automated equipment.</em></h1>
+    <p>Our rental program is designed to give contractors flexibility and confidence to expand their equipment capabilities and meet emerging customer demands.</p>
     <p>StoneAge has you covered with back-up equipment, spare parts, and expert on-call field support. Renting also provides a way to experience the benefits of new products first hand.</p>
-    <p><strong>We carry a full range of compatible hoses and fittings</strong> in our rental locations.</p>
+    <p><strong>We also carry a full range of compatible hoses and fittings</strong> in all our rental locations.</p>
     <h3>Purchase Options</h3>
-    <p><strong>The cost of rental can be applied to the acquisition of new equipment.</strong> Renters will get the benefit of test driving automated equipment and an easy way to reduce the capital investment if you decide you can’t live without it.</p>    
+    <p><strong>A percentage of rental costs can be applied toward the purchase of new or rental equipment. </strong>Renters benefit from access to the latest automated equipment technology and our purchase option provides an easy way to reduce the overall capital investment when it’s time to add it to your equipment fleet.</p>    
   </div>
   
   <aside class="col-sm-3 col-sm-offset-2 cta">
     <div>
-      <img src="assets/img/thumb/barracuda-02.jpg" class="img-responsive" alt="Barracuda rotary shotgun tools" />
-      <p class="bold" style="border:none;">Renting from StoneAge is a great option when you want to:</p>
+      <img src="assets/img/rentals_blog_header.jpg" class="img-responsive" alt="StoneAge tool rentals" />
+      <p class="bold" style="border:none; margin-top: 15px;">Renting from StoneAge is a great option when you want to:</p>
       <ul>
         <li>Expand your fleet temporarily during times of peak use</li>
         <li>Quickly get back-up equipment in the middle of a job</li>
-        <li>Try out newly released stoneage equipment</li>
+        <li>Try out newly released StoneAge equipment</li>
         <li>Use purchase options for greater flexibility</li>
       </ul>
+      <p style="border:none;"><a href="#"><i class="fa fa-newspaper-o"></i> <em>Read more... (link to Press Release in our News section)</em></a></p>
     </div>
   </aside>
 </section>
 
-<section class="flui-container bg-lt-grey">
-  <div class="container">
-    <h2 class="margin-top-30">Contact any of our regional locations to rent StoneAge equipment</h2>
-    <p>We ship rental equipment and support jobs throughout North America.</p>
+<section class="flui-container bg-lt-grey padding-tb-60">
+  <div class="container text-center">
+    <h2 class="slab bold">Contact any of our regional locations to rent StoneAge equipment</h2>
+    <p>We will help you determine what equipment is best suited for your job and our Automated Technicians can help get you going.<br>
+      We ship rental equipment and support jobs throughout the continental United States.<br>Delivery is available, and training can be provided at our site or yours.
+    </p>
+    <hr style="border-top:1px solid #fff;">
     <div class="row">
       <div class="col-sm-4">
         <h5 class="bold slab">Houston Area</h5>
@@ -59,13 +63,14 @@ permalink: /rentals
           <a href="mailto:sales-oh@stoneagetools.com">sales-oh@stoneagetools.com</a></p>
       </div>
     </div>
+    <hr style="border-top:1px solid #fff;">
     <div class="row padding-tb-30">
       <h4 class="thin grey"><em>We are here to help you meet your rental service needs.</em></h4>
     </div>
   </div>
 </section>
     
-<!-- Products -->
+<!-- Products
 <section class="fluid-container margin-bottom-120" style="border-top:1px solid #ddd;">
   <div class="container padding-tb-30 width-60 related">
     <div class="section-heading">
@@ -156,6 +161,6 @@ permalink: /rentals
       </div>
     </div>
   </div>
-</section>
+</section>-->
 
 {% include footer-cta.html %}
