rentals page overhaul with FAQs

--- a/contact.html
+++ b/contact.html
@@ -43,14 +43,17 @@ contact-main: yes
               <a href="/durango-headquarters">View details</a></p>
             <h3>Houston Area</h3>
             <p>
+              <i class="fa fa-star" st></i> <em>Rental Location</em> <i class="fa fa-star" st></i><br>
               +1 (281) 888-5069<br/>
               <a href="/houston">View details</a></p>
             <h3>Louisiana</h3>
             <p>
+              <i class="fa fa-star" st></i> <em>Rental Location</em> <i class="fa fa-star" st></i><br>
               +1 (225) 508-3520<br/>
               <a href="/louisiana">View details</a></p>
             <h3>Ohio</h3>
             <p>
+              <i class="fa fa-star" st></i> <em>Rental Location</em> <i class="fa fa-star" st></i><br>
               +1 (440) 230-8080<br/>
               <a href="/ohio">View details</a></p>
           </div>
