rentals approved version almost complete

--- a/rentals.html
+++ b/rentals.html
@@ -11,10 +11,44 @@ master-slider: yes
     <h1 class="page-heading">Rent StoneAge Tools &amp; Equipment</h1>
   </div>
 </div>
+<section class="fluid-container bg-lt-gray margin-top-30">
+  <div class="container">
+    <img src="/assets/img/rental_image_002.jpg" alt="StoneAge Rentals" class="img-responsive" />
+  </div>
+</section>
+<section class="fluid-container bg-lt-grey padding-tb-30">
+  <div class="container">
+    <h2 class="slab bold spaced margin-bottom-30" style="font-size:30px;">Contact a rental facility near you</h2>
+    <div class="row">
+      <div class="col-sm-3">
+        <h5 class="bold slab">Houston Area</h5>
+        <p>Pasadena, TX<br>
+          +1 (281) 888-5069<br>
+          <a href="mailto:sales-tx@stoneagetools.com">sales-tx@stoneagetools.com</a></p>
+      </div>
+      <div class="col-sm-3">
+        <h5 class="bold slab">Louisiana</h5>
+        <p>Geismar, LA<br>
+          +1 (225) 508-3520<br>
+          <a href="mailto:sales-la@stoneagetools.com">sales-la@stoneagetools.com</a></p>
+      </div>
+      <div class="col-sm-3">
+        <h5 class="bold slab">Ohio</h5>
+        <p>North Royalton, OH<br>
+          +1 (440) 230-8080<br>
+          <a href="mailto:sales-oh@stoneagetools.com">sales-oh@stoneagetools.com</a></p>
+      </div>
+      <div class="col-sm-3">
+        <a href="/contact"><img src="/assets/img/sa-rental-locations.png" alt="StoneAge rental locations" class="img-responsive" /></a>
+      </div>
+    </div>
+  </div>
+</section>
 
-<section class="fluid-container padding-tb-30 rental-questions">
+<section class="fluid-container padding-tb-60 margin-bottom-30 rental-questions">
   <div class="container">
     <div class="col-sm-8">
+      <h2 class="spaced margin-bottom-30" style="font-size:24px;">Frequently Asked Questions</h2>
       <!-- Start Accordion -->
       <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
         <div class="panel panel-default">
@@ -51,7 +85,7 @@ master-slider: yes
                 </div>
               </div>
               <h3>Required Documents</h3>
-              <p>In order to rent equipment you’ll need to <a href="#">submit a credit application</a> to establish an account with StoneAge. If you already have an account with StoneAge you can skip this step. You will also need to have your insurance provider <a href="#">complete the StoneAge insurance certificate</a>.</p>
+              <p>In order to rent equipment you’ll need to <a href="/assets/pdf/StoneAge_Credit_Application.pdf" target="_blank">submit a credit application</a> to establish an account with StoneAge. If you already have an account with StoneAge you can skip this step. You will also need to have your insurance provider <a href="#">complete the StoneAge insurance certificate</a>.</p>
             </div>
           </div>
         </div>
@@ -220,6 +254,28 @@ master-slider: yes
           </div>
         </div>
         <div class="panel panel-default">
+          <div class="panel-heading" role="tab" id="headingFifteen">
+            <h4 class="panel-title">
+              <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseFifteen" aria-expanded="false" aria-controls="collapseFifteen">
+                Can I purchase my rental equipment? <i class="indicator fa fa-caret-down pull-right" aria-hidden="true"></i>
+              </a>
+            </h4>
+          </div>
+          <div id="collapseFifteen" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingFifteen">
+            <div class="panel-body">
+              <p>Yes, our purchase option provides an easy way to reduce overall capital investment when you want to add rented equipment to your fleet. You can receive credit equal to:
+              <ul>
+                <li>90% of the paid rentals for a one-month rental</li>
+                <li>80% of the paid rentals for a two-month rental</li>
+                <li>70% of the paid rentals for a three-month rental</li>
+                <li>60% of the paid rentals for a four-month rental</li>
+                <li>50% of the paid rentals for rentals of five months or longer</li>
+              </ul>
+              <p><a href="/assets/pdf/rental_purchase_option_policy.pdf" target="_blank">Download the Purchase Option Policy Agreement</a> and return to your local rental facility.</p>
+            </div>
+          </div>
+        </div>
+        <div class="panel panel-default">
           <div class="panel-heading" role="tab" id="headingFourteen">
             <h4 class="panel-title">
               <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseFourteen" aria-expanded="false" aria-controls="collapseFourteen">
@@ -257,103 +313,24 @@ master-slider: yes
       </div><!-- end accordion -->
     </div>
   
-    <aside class="col-sm-3 col-sm-offset-1 cta right-sidebar">
+    <aside class="col-sm-3 col-sm-offset-1 cta right-sidebar padding-tb-30">
       <div>
-        <img src="assets/img/rentals_blog_header.jpg" class="img-responsive" alt="StoneAge tool rentals" />
         <ul class="list-unstyled">
-          <li><h3> </h3></li>
-          <li><a href="#">Set up an account</a></li>
+          <li><h3>What You'll Need</h3></li>
+          <li><a href="/assets/pdf/StoneAge_Credit_Application.pdf" target="_blank">Download Credit Application</a></li>
           <li><a href="#">Download Insurance Certificate</a></li>
+          <li><a href="/assets/pdf/rental_purchase_option_policy.pdf" target="_blank">Download Purchase Option Policy</a></li>
+<!--
           <li><a href="/contact">Contact a Rental Facility Near You</a></li>
           <li><a href="/contact"><img src="/assets/img/sa-rental-locations.jpg" alt="StoneAge rental locations" class="img-responsive" /></a></li>
+-->
           <li><h3>Have More Questions?</h3>
-            <a href="#">Click here to e-mail support</a> or contact your local rental facility directly for more information.</li>
+            <a href="/contact">Click here to e-mail support</a> or contact your local rental facility directly for more information.</li>
           </ul>
       </div>
     </aside>
   </div>
 </section>
-    
-<!-- Product Testimonials -->
-<div class="row product-testimonials">
-  <div id="carousel-product" class="carousel slide" data-ride="carousel">
-    <!-- Indicators -->
-    <ol class="carousel-indicators">
-      <li data-target="#carousel-product" data-slide-to="0" class="active"></li>
-      <li data-target="#carousel-product" data-slide-to="1"></li>
-      <li data-target="#carousel-product" data-slide-to="2"></li>
-      <li data-target="#carousel-product" data-slide-to="3"></li>
-      <li data-target="#carousel-product" data-slide-to="4"></li>
-    </ol>
 
-    <!-- Wrapper for slides -->
-    <div class="carousel-inner" role="listbox">
-      <div class="item active">
-<!--
-        <div class="insight">
-          <img src="../assets/img/quote.png" alt="quote" class="quote" />
-          <p>It’ll pay for itself just on better cleaning.</p>
-          <p class="signed">-Shawn Barker,<br/>Barker Construction</p>
-        </div>
--->
-        <img src="/assets/img/sliders/abx-500_vertical_tank.jpg" alt="ABX-2L cleaning small tube exchanger">
-      </div>
-
-      <div class="item">
-        <div class="insight">
-          <img src="/assets/img/quote.png" alt="quote" class="quote" />
-          <p>The StoneAge ABX-2L works great in acid service and has allowed us to become 100% automated.</p>
-          <p class="signed">- Mark Blanchard,<br/>Water Works Industrial Services</p>
-        </div>
-        <img src="/assets/img/sliders/abx-2l-big-exchanger.jpg" alt="ABX-2L rental for vertical exchanger cleaning">
-      </div>
-
-      <div class="item">
-<!--
-        <div class="insight">
-          <img src="../assets/img/quote.png" alt="quote" class="quote" />
-          <p>The StoneAge ABX-2L works great in acid service and has allowed us to become 100% automated.</p>
-          <p class="signed">- Mark Blanchard,<br/>Water Works Industrial Services</p>
-        </div>
--->
-        <img src="/assets/img/sliders/bc_tube_bundle.jpg" alt="...">
-      </div>
-
-      <div class="item">
-<!--
-        <div class="insight">
-          <img src="../assets/img/quote.png" alt="quote" class="quote" />
-          <p>The StoneAge ABX-2L works great in acid service and has allowed us to become 100% automated.</p>
-          <p class="signed">- Mark Blanchard,<br/>Water Works Industrial Services</p>
-        </div>
--->
-        <img src="/assets/img/sliders/lwp-slide-02.jpg" alt="ABX-2L with lightweight positioner">
-      </div>
-
-      <div class="item">
-<!--
-        <div class="insight">
-          <img src="../assets/img/quote.png" alt="quote" class="quote" />
-          <p>The StoneAge ABX-2L works great in acid service and has allowed us to become 100% automated.</p>
-          <p class="signed">- Mark Blanchard,<br/>Water Works Industrial Services</p>
-        </div>
--->
-        <img src="/assets/img/sliders/abx-2l-operator.jpg" alt="Rent ABX-2L for echanger tube lancing">
-      </div>
-
-    </div><!-- End wrapper -->
-
-    <!-- Controls -->
-    <a class="left carousel-control" href="#carousel-product" role="button" data-slide="prev">
-      <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-      <span class="sr-only">Previous</span>
-    </a>
-    <a class="right carousel-control" href="#carousel-product" role="button" data-slide="next">
-      <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-      <span class="sr-only">Next</span>
-    </a>
-  </div>
-</div>
-<!-- End Product Testimonials -->
 
 {% include footer-cta.html %}
