--- a/about-stoneage.html
+++ b/about-stoneage.html
@@ -24,8 +24,10 @@ permalink: /about
     <div class="padding-tb-60 padding-left-60">
       <p class="point"><span>Need help with a job?</span><br/>
       <a href="/contact">Contact Our Team of Experts</a></p>
+      <p class="point"><span>Need equipment fast?</span><br/>
+      <a href="/rentals">See StoneAge Tool Rentals</a></p>
       <p class="point"><span>Want to work with us?</span><br/>
-      <a href="/jobs">Check our career postings</a></p>
+      <a href="/jobs">Check Our Career Postings</a></p>
     </div>
   </aside>
 </section>
