--- a/rentals.html
+++ b/rentals.html
@@ -85,7 +85,7 @@ master-slider: yes
                 </div>
               </div>
               <h3>Required Documents</h3>
-              <p>In order to rent equipment you’ll need to <a href="/assets/pdf/StoneAge_Credit_Application.pdf" target="_blank">submit a credit application</a> to establish an account with StoneAge. If you already have an account with StoneAge you can skip this step. You will also need to have your insurance provider <a href="#">complete the StoneAge insurance certificate</a>.</p>
+              <p>In order to rent equipment you’ll need to <a href="/assets/pdf/StoneAge_Credit_Application.pdf" target="_blank">submit a credit application</a> to establish an account with StoneAge. If you already have an account with StoneAge you can skip this step. You will also need to meet the <a href="#">StoneAge customer insurance requirements</a>.</p>
             </div>
           </div>
         </div>
@@ -316,14 +316,10 @@ master-slider: yes
     <aside class="col-sm-3 col-sm-offset-1 cta right-sidebar padding-tb-30">
       <div>
         <ul class="list-unstyled">
-          <li><h3>What You'll Need</h3></li>
+          <li><h3>Rental Documents</h3></li>
           <li><a href="/assets/pdf/StoneAge_Credit_Application.pdf" target="_blank">Download Credit Application</a></li>
-          <li><a href="#">Download Insurance Certificate</a></li>
+          <li><a href="/assets/pdf/StoneAge_Customer_Insurance_Requirements.pdf" target="_blank">Download Insurance Requirements</a></li>
           <li><a href="/assets/pdf/rental_purchase_option_policy.pdf" target="_blank">Download Purchase Option Policy</a></li>
-<!--
-          <li><a href="/contact">Contact a Rental Facility Near You</a></li>
-          <li><a href="/contact"><img src="/assets/img/sa-rental-locations.jpg" alt="StoneAge rental locations" class="img-responsive" /></a></li>
--->
           <li><h3>Have More Questions?</h3>
             <a href="/contact">Click here to e-mail support</a> or contact your local rental facility directly for more information.</li>
           </ul>
