--- a/service-repairs-returns.html
+++ b/service-repairs-returns.html
@@ -12,17 +12,46 @@ permalink: /service
 </div>
 
 <section class="results container padding-tb-30">
-  <div class="col-sm-7">
+  <div class="col-sm-7 margin-bottom-30">
     <h2 class="section-heading">Technical Support</h2>
     <p>For Technical Support, please contact StoneAge. Operator's manuals and repair videos are available on this website. They illustrate tools, identify parts, and detail maintenance and overhaul procedures.</p>
 
     <h2 class="section-heading">Repairs</h2>
-    <p>Repair &amp; Maintenance Service is available by the same technicians who build and test our tools. We try to complete repairs and test every tool within three days of receipt. You must call StoneAge for an RMA number prior to sending your tool in for repair. Send tool to:</p>
-    <p class="bold">StoneAge Inc.<br>
-    Attention Repairs<br>
-    466 S. Skylane Dr.<br>
-      Durango CO 81303, USA</p>
-    <p>Serial Number Database is maintained on all equipment sold. If a serial number is provided when ordering parts, we can verify that the right parts are specified.</p>
+    <p>Repair &amp; Maintenance Service is available by the same technicians who build and test our tools. We try to complete repairs and test every tool within three days of receipt.</p>
+    <p>You can send your tool in for repair or visit one of our regional facilities:</p>
+    <div class="row">
+      <div class="col-sm-6">
+        <h5 class="bold slab">Houston Area</h5>
+        <p>2150 Pansy St.<br>
+          Pasadena, TX 77503<br>
+          +1 (281) 888-5069<br>
+          <a href="mailto:sales-tx@stoneagetools.com">sales-tx@stoneagetools.com</a></p>
+      </div>
+      <div class="col-sm-6">
+        <h5 class="bold slab">Louisiana</h5>
+        <p>6023 Industrial Dr.<br>
+          Geismar, LA 70734<br>
+          +1 (225) 508-3520<br>
+          <a href="mailto:sales-la@stoneagetools.com">sales-la@stoneagetools.com</a></p>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-sm-6">
+        <h5 class="bold slab">Ohio</h5>
+        <p>11859 Royalton Rd.<br>
+          N. Royalton, OH 44133<br>
+          +1 (440) 230-8080<br>
+          <a href="mailto:sales-oh@stoneagetools.com">sales-oh@stoneagetools.com</a></p>
+      </div>
+      <div class="col-sm-6">
+        <h5 class="bold slab">Headquarters</h5>
+        <p>466 S. Skylane Dr.<br>
+          Durango CO 81303<br>
+          +1 (970) 259-2869<br>
+          <a href="mailto:sales@stoneagetools.com">sales@stoneagetools.com</a></p>
+      </div>
+    </div>
+    <p>Please contact us for an RMA number for your repair. Serial Number Database is maintained on all equipment sold. If a serial number is provided when ordering parts, we can verify that the right parts are specified.</p>
 
     <p><strong>Warthog Authorized Repair Centers</strong><br><a href="/contact">See our listing of Warthog sewer tools dealers to find an Authorized Repair Center in your area.</a></p>
 
@@ -44,6 +73,7 @@ permalink: /service
 
   <aside class="col-sm-4 col-sm-offset-1 right-sidebar">
     <div class="row grey">
+      <a href="/contact"><img src="/assets/img/sa-4-locations.jpg" class="img-responsive" alt="StoneAge locations" /></a><br>
       <h3>Service Contacts</h3>
       <table class="table table-responsive">
         <tr>
