--- a/assets/vid/vids.html
+++ b/assets/vid/vids.html
@@ -2,6 +2,9 @@
 <div id="godirect-vid">
   <iframe width="560" height="315" src="https://www.youtube.com/embed/S4wGigUqs9o?rel=0&autoplay=1" frameborder="0" allowfullscreen></iframe>
 </div>
+<div id="rentals-vid">
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/RBRXZTQLBf0?rel=0&autoplay=1" frameborder="0" allowfullscreen></iframe>
+</div>
 
 <!-- WB -->
 <div id="hcs-vid">
