--- a/index.html
+++ b/index.html
@@ -225,8 +225,8 @@ permalink: /
     <p><a href="/rentals.html">Rentals Now Available</a> at all regional locations with nationwide support.</p>
     <!-- Lightbox call -->
     <div>
-      <a href="#" src="/assets/vid/vids.html" data-featherlight="/assets/vid/vids.html #godirect-vid">
-        <img src="assets/vid/thumb/godirect-vid.png" alt="StoneAge Direct Sales video" class="img-responsive" />
+      <a href="#" src="/assets/vid/vids.html" data-featherlight="/assets/vid/vids.html #rentals-vid">
+        <img src="assets/vid/thumb/rentals-vid.png" alt="StoneAge Tool Rentals video" class="img-responsive" />
       </a>
     </div>
     <!-- End Lightbox call -->
