--- a/index.html
+++ b/index.html
@@ -193,6 +193,11 @@ permalink: /
     </div>
     <ul class="home-news list-unstyled">
       <li>
+        <h4><a href="http://news.stoneagetools.com/rental-program-for-waterblast-equipment-launched" target="_blank">Rentals Now Available</a></h4>
+        <p>StoneAge announces rental program for waterblast tools and equipment. You can now rent industry-leading waterblast tools and automated equipment from StoneAge regional locations in TX, LA, and OH.<br>
+<small><i class="fa fa-paper-plane-o"></i> E-blast, September 2016</small></p>
+      </li>
+      <li>
         <h4><a href="http://news.stoneagetools.com/free-beetle-offer">Free Beetle Offer</a></h4>
         <p>Optimize your automated equipment by pairing it with the right rotary nozzle - FOR FREE<br>
 <small><i class="fa fa-paper-plane-o"></i> E-blast, August, 2016</small></p>
@@ -206,11 +211,6 @@ permalink: /
         <h4><a href="http://news.stoneagetools.com/striker-discount-offer-limited">10% OFF Striker</a></h4>
         <p>For a limited time, StoneAge is reducing the price of our highly successful Striker Remote Shotgun System by 10%.<br>
 <small><i class="fa fa-paper-plane-o"></i> E-blast, June 2016</small></p>
-      </li>
-      <li>
-        <h4><a href="http://info.stoneagetools.com/double-the-life-of-your-44k-barracuda" target="_blank">Double the life of your 44k Barracuda</a></h4>
-        <p>The new <strong>BC 705 high pressure cartridge for 44k StoneAge Barracuda shotgun tools</strong> has successfully enabled many of our customers to double the operating life between maintenance cycles from 40 to 80 hours.<br>
-<small><i class="fa fa-paper-plane-o"></i> E-blast, May 2016</small></p>
       </li>
       <li><a href="/news">More news here</a></li>
     </ul>
