--- a/rentals.html
+++ b/rentals.html
@@ -85,7 +85,7 @@ master-slider: yes
                 </div>
               </div>
               <h3>Required Documents</h3>
-              <p>In order to rent equipment you’ll need to <a href="/assets/pdf/StoneAge_Credit_Application.pdf" target="_blank">submit a credit application</a> to establish an account with StoneAge. If you already have an account with StoneAge you can skip this step. You will also need to meet the <a href="#">StoneAge customer insurance requirements</a>.</p>
+              <p>In order to rent equipment you’ll need to <a href="/assets/pdf/StoneAge_Credit_Application.pdf" target="_blank">submit a credit application</a> to establish an account with StoneAge. If you already have an account with StoneAge you can skip this step. You will also need to meet the <a href="/assets/pdf/StoneAge_Customer_Insurance_Requirements.pdf" target="_blank">StoneAge customer insurance requirements</a>.</p>
             </div>
           </div>
         </div>
