--- a/news.html
+++ b/news.html
@@ -17,6 +17,14 @@ permalink: /news
       
       <div class="media">          
         <div class="media-body">
+          <a href="http://news.stoneagetools.com/rental-program-for-waterblast-equipment-launched"><h4 class="media-heading"><i class="fa fa-paper-plane-o"></i> Rentals Now Available</h4></a>
+          StoneAge announces rental program for waterblast tools and equipment. You can now rent industry-leading waterblast tools and automated equipment from StoneAge regional locations in TX, LA, and OH.
+          <p class="grey"><small>E-blast &ndash; September 7, 2016</small></p>
+        </div>
+      </div>
+      
+      <div class="media">          
+        <div class="media-body">
           <a href="http://news.stoneagetools.com/free-beetle-offer"><h4 class="media-heading"><i class="fa fa-paper-plane-o"></i> Free Beetle Offer</h4></a>
           Optimize your automated equipment by pairing it with the right rotary nozzle - FOR FREE
           <p class="grey"><small>E-blast &ndash; August 8, 2016</small></p>
